# GreenCreditAI

./: .env.example  .gitignore  CREATE_RECORD_FEATURE_GUIDE.md  DEBUG.md  DEPLOYMENT.md  FRONTEND_FIX_SUMMARY.md  README.md  RECORDS_ORIGIN_EXPLANATION.md  RECORD_ADDED_ERROR_FIX.md  TOKEN_REDEMPTION_TESTS.md  TOKEN_VALUES_EXPLANATION.md  check-contract.js  create-env.js  create-sample-records.js  docker-compose.yml  package-lock.json  package.json  setup.sh  simple-abi.js  simple-test.js  test-api.js  test-backend.js  test-complete-flow.js  test-curl.js  test-scenario.js  test-token-redemption-api.js  test-token-redemption-simple.js  test-token-redemption.js  test-user-records.js  test-user-records2.js
ai/: Dockerfile  ai_model.py  esg_data.csv  esg_pipeline.yaml  pyproject.toml  requirements.txt
ai/kubernetes/: esg-inferenceservice.yaml  sklearn-serving-runtime.yaml
ai/run/: run.py
ai/src/configs/: load_config.py
ai/src/constants/: api_methods.py  model_features.py
ai/src/controllers/: apis.py  app.py  env.py  esg_pipeline.py  ingestion_controller.py  ingestion_controller.py.deprecated  kfp_controller.py  model_controller.py  routes.py  service_controller.py
ai/src/middlewares/: log_request.py
ai/src/models/: route.py
ai/src/stores/: store.py
ai/src/utils/: logger.py
ai/trained_models/: model.joblib
backend/: .env.example  Dockerfile  authMiddleware.js  package-lock.json  package.json  server-simple.js  server.js  userMethods.js  userModel.js
blockchain/: GreenCredit.sol  contract_info.txt
frontend/: INTERNATIONALIZATION.md  LICENSE  package.json  (+3 more)
(+22 files in other folders)
