[project]
name = "esg-model"
version = "0.1.0"
description = ""
package-mode = false
authors = [
    {name = "Khanh Nguyen Kieu Bao",email = "khanhnkb@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "flask (>=3.1.2,<4.0.0)",
    "flask-log-request-id (>=0.10.1,<0.11.0)",
    "flask-cors (>=6.0.1,<7.0.0)",
    "dotenv (>=0.9.9,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
