[project]
name = "esg-model"
version = "0.1.0"
description = ""
package-mode = false
authors = [
    {name = "Khanh Nguyen Kieu Bao",email = "khanhnkb@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "flask (>=3.1.2,<4.0.0)",
    "flask-log-request-id (>=0.10.1,<0.11.0)",
    "flask-cors (>=6.0.1,<7.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "yesg (>=2.1.1,<3.0.0)",
    "pymongo (>=4.15.0,<5.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "yfinance (>=0.2.65,<0.3.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "joblib (>=1.5.2,<2.0.0)",
    "kfp (>=2.14.3,<3.0.0)",
    "boto3 (>=1.40.30,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
